--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^2.1.5",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
